@@ -1,11 +1,6 @@
 // src/main/java/com/example/Game.java
 package anderson.app.lwjgl;
 
-
-
-
-
-
 import java.net.URL;
 
 import org.lwjgl.glfw.GLFW;
@@ -17,8 +12,16 @@ import static org.lwjgl.stb.STBTruetype.*;
 import org.lwjgl.stb.STBTTFontinfo;
 import org.lwjgl.system.MemoryStack;
 
-import java.util.*;
-
+import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Random;
+import java.util.Iterator;
+import java.util.Deque;
+import java.util.ArrayDeque;
 
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
@@ -33,6 +36,13 @@ import java.io.File;
 
 import java.util.Scanner;
 import static org.lwjgl.opengl.GL11.*;
+
+// Add imports for Orbitron font rendering
+import java.awt.*;
+import java.awt.image.BufferedImage;
+import java.awt.geom.AffineTransform;
+import static org.lwjgl.system.MemoryUtil.*;
+import org.lwjgl.BufferUtils;
 
 public class Game {
     // world & camera
@@ -95,6 +105,7 @@ public class Game {
     private boolean dealarPayedThisRound = false;
     private boolean canGamble = true;
     //Shop//
+    private boolean isDelay = true;
     private boolean shopOpened = false;
     private boolean submitKeyPreviouslyDown = false;
     private boolean key1PreviouslyDown = false;
@@ -105,18 +116,12 @@ public class Game {
     private int lives = 5; 
     private int score = 0;
     
-    // Message system
-    private List<TextBoxMessage> messages = new ArrayList<>();
-    private static final int MAX_MESSAGES = 3;
-    
-    // Font rendering system
-    private ByteBuffer fontData;
-    private int fontTexture;
-    private float fontScale = 1.0f;
-    private static final int FONT_SIZE = 32;
-    private static final int FONT_TEXTURE_SIZE = 512;
+    // Message system with Orbitron font
+    private final Deque<Message> messages = new ArrayDeque<>();
+    private static final int MAX_MESSAGES = 5;
+    private static final double DISPLAY_DURATION = 5.5;
 
-    // controls mapping
+    // controls mappings
     private Map<String, Integer> keyMap;
     //private final String[] possibleKeys = {"Q","A","W","S","E","D"};
 
@@ -144,8 +149,7 @@ public class Game {
         spawnStars(5);
         mobs = new ArrayList<>();
         
-        // Initialize font
-        initFont();
+        // Font system initialized in showMessage
         
     }
 
@@ -251,13 +255,15 @@ public class Game {
             showMessage("DOWN  = " + keys.get(3));
             DWSMB = 0;
         }
-
-        if (GLFW.glfwGetKey(window, keyMap.get("LEFT")) == GLFW.GLFW_PRESS) player.moveHoriz(-1, false);
-        if (GLFW.glfwGetKey(window, keyMap.get("RIGHT")) == GLFW.GLFW_PRESS) player.moveHoriz(1, true);
+        
+        if (GLFW.glfwGetKey(window, keyMap.get("LEFT")) == GLFW.GLFW_PRESS && !freezeTime) player.moveHoriz(-1, false);
+        else if (GLFW.glfwGetKey(window, keyMap.get("LEFT")) == GLFW.GLFW_PRESS) showMessage("You cant move while shop is open");
+        if (GLFW.glfwGetKey(window, keyMap.get("RIGHT")) == GLFW.GLFW_PRESS && !freezeTime) player.moveHoriz(1, true);
+        else if (GLFW.glfwGetKey(window, keyMap.get("RIGHT")) == GLFW.GLFW_PRESS) showMessage("You cant move while shop is open");
         if (GLFW.glfwGetKey(window, keyMap.get("CHARATER SKILL")) == GLFW.GLFW_PRESS) {
             if (player.witchCharter == 0) {
                 player.dash();
-            } else if (player.witchCharter == 1) {
+            } else if (player.witchCharter == 1 && canGamble) {
                 canGamble = false;
                 gambling();
             }
@@ -273,11 +279,16 @@ public class Game {
             freezeTime = shopOpened;
             if (shopOpened) {
                 showMessage("You have entered the shop");
-                showMessage("The things you can buy are:");
-                if (player.witchCharter == 0) {
-                    showMessage("Press 1 for dash level 2 for 200 score");
-                } else if (player.witchCharter == 1 && !dealarPayedThisRound) {
-                    showMessage("Press 1 to pay the dealer this round for 200 score");
+                showMessage("The things you can buy:");
+                isDelay = true;
+                if (player.witchCharter == 0 && isDelay) {
+                    showMessage("Press 1 for dash level 2 for 20 score");
+                    showMessage("Press 2 to change your skill to gambling");
+                    isDelay = false;
+                } else if (player.witchCharter == 1 && !dealarPayedThisRound && isDelay) {
+                    showMessage("Press 1 to pay the dealer this round for 20 score");
+                    showMessage("Press 2 to change your skill to dash");
+                    isDelay = false;
                 }
             } else {
                 showMessage("You have left the shop");
@@ -288,15 +299,23 @@ public class Game {
         // Handle in-shop purchases (does NOT close shop)
         if (shopOpened) {
             if (key1Pressed && !key1PreviouslyDown) {
-                if (player.witchCharter == 0 && score >= 200) {
-                    score -= 200;
+                if (player.witchCharter == 0 && score >= 20) {
+                    score -= 20;
                     showMessage("Dash level purchased!");
-                } else if (player.witchCharter == 1 && score >= 200 && !dealarPayedThisRound) {
-                    score -= 200;
+                } else if (player.witchCharter == 1 && score >= 20 && !dealarPayedThisRound) {
+                    score -= 20;
                     dealarPayedThisRound = true;
                     showMessage("Dealer paid, your score is now: " + score);
                 } else {
                     showMessage("You're too poor to buy that");
+                }
+            }else if (key2Pressed && !key2PreviouslyDown){
+                if (player.witchCharter == 0) {
+                    player.witchCharter = 1;
+                    showMessage("Your charator skil is now gambling");
+                } else if (player.witchCharter == 1) {
+                    player.witchCharter = 0;
+                    showMessage("Your charator skil is now dash");
                 }
             }
         }
@@ -347,146 +366,101 @@ public class Game {
             showMessage("Dash is on cooldown! Wait for " + String.format("%.1f", player.getDashCooldown()) + " seconds.");
             showDashCooldownMessage = false;
         }
-        
-        // Update message timers and remove expired
-        messages.removeIf(msg -> {
-            msg.timer -= dt;
-            return msg.timer <= 0;
-        });
     }
     
     public void showMessage(String text) {
-        // Limit to MAX_MESSAGES
-        if (messages.size() >= MAX_MESSAGES) {
-            messages.remove(0); // Remove oldest message
+        double now = GLFW.glfwGetTime();
+        if (messages.size() > MAX_MESSAGES) {
+            Message oldest = messages.removeLast();
+            glDeleteTextures(oldest.texId);
         }
-        messages.add(new TextBoxMessage(text, 2.5f, 1.0f)); // 2.5s display, 1s fade
+        messages.addFirst(new Message(text, now));
     }
     
-    private void initFont() {
-        try {
-            // Load font file from resources using Path
-            Path fontPath = Paths.get("anderson", "font", "BrownieStencil-8O8MJ.ttf");
-            String resourcePath = "/" + fontPath.toString().replace('\\', '/');
-            InputStream fontStream = getClass().getResourceAsStream(resourcePath);
-            if (fontStream == null) {
-                System.err.println("Font file not found: " + resourcePath);
-                return; // Continue without font
-            }
-            
-            // Read font data
-            byte[] fontBytes = fontStream.readAllBytes();
-            fontData = ByteBuffer.allocateDirect(fontBytes.length);
-            fontData.put(fontBytes);
-            fontData.flip();
-            
-            // Create font texture atlas
-            createFontTexture();
-            
-        } catch (Exception e) {
-            System.err.println("Failed to load font: " + e.getMessage());
-            // Continue without font
-        }
-    }
-    
-    private void createFontTexture() {
-        // For now, just set a flag that we have font data
-        // We'll use simple block text rendering instead of complex texture atlas
-        System.out.println("Font loaded successfully, using simple text rendering");
-    }
+
     
     private void renderMessages() {
         if (messages.isEmpty()) return;
         
-        // Enable blending for transparency
+        // Save current OpenGL state
+        glPushAttrib(GL_ALL_ATTRIB_BITS);
+
+
+        double now = GLFW.glfwGetTime();
+        
+        // Expire old messages
+        Iterator<Message> it = messages.iterator();
+        while (it.hasNext()) {
+            Message m = it.next();
+            double age = now - m.timestamp;
+            if (age > DISPLAY_DURATION) {
+                if (freezeTime) break; // If time is frozen, keep the message visible
+                glDeleteTextures(m.texId);
+                it.remove();
+            }
+        }
+        
+        // Draw queued messages
+        int idx = 0;
+        for (Message m : messages) {
+            double age = now - m.timestamp;
+            float alpha = (float) Math.max(0.0, 1.0 - (age / DISPLAY_DURATION));
+            if (freezeTime) alpha = 1.0f; // Full opacity if time is frozen
+            drawMessage(m.texId, m.textWidth, m.textHeight, idx, alpha);
+            idx++;
+        }
+        
+        // Restore OpenGL state
+        glPopAttrib();
+    }
+    
+    private void drawMessage(int texId, int textW, int textH, int index, float alpha) {
+        int boxW = textW + 20;
+        int boxH = textH + 20;
+        int x = (width - boxW);
+        int y = (int)(height - MAX_MESSAGES * (boxH + 10)) + index * (boxH + 10);
+        
+
+        // Save current OpenGL state
+        glPushAttrib(GL_ALL_ATTRIB_BITS);
+        glMatrixMode(GL_TEXTURE);
+        glPushMatrix();
+        glLoadIdentity();
+        glMatrixMode(GL_MODELVIEW);
+
+        // Enable blending for alpha transparency
         glEnable(GL_BLEND);
         glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
-        
-        float startY = height * 0.25f;
-        float messageHeight = 80f;  // Increased from 50f to accommodate larger text
-        float spacing = 20f;        // Increased from 15f
-        
-        for (int i = 0; i < messages.size(); i++) {
-            TextBoxMessage msg = messages.get(i);
-            float alpha = msg.getAlpha();
-            
-            if (alpha <= 0) continue;
-            
-            // Draw background box
-            glColor4f(0f, 0f, 0f, 0.9f * alpha);  // More opaque background
-            float boxW = width * 0.6f;
-            float boxH = messageHeight;
-            float boxX = (width - boxW) / 2f;
-            float boxY = startY + i * (messageHeight + spacing);
-            
-            glBegin(GL_QUADS);
-            glVertex2f(boxX, boxY);
-            glVertex2f(boxX + boxW, boxY);
-            glVertex2f(boxX + boxW, boxY + boxH);
-            glVertex2f(boxX, boxY + boxH);
-            glEnd();
-            
-            // Draw border
-            glColor4f(1f, 1f, 1f, 0.3f * alpha);
-            glBegin(GL_LINE_LOOP);
-            glVertex2f(boxX, boxY);
-            glVertex2f(boxX + boxW, boxY);
-            glVertex2f(boxX + boxW, boxY + boxH);
-            glVertex2f(boxX, boxY + boxH);
-            glEnd();
-            
-            // Draw text
-            glColor4f(1f, 1f, 1f, alpha);
-            renderText(msg.text, boxX + 30, boxY + boxH / 2 + 10);
-        }
-        
+
+        // Black background box with fade
+        glDisable(GL_TEXTURE_2D);
+        glColor4f(0f, 0f, 0f, 0.75f * alpha);
+        glBegin(GL_QUADS);
+            glVertex2f(x,     y);
+            glVertex2f(x+boxW, y);
+            glVertex2f(x+boxW, y+boxH);
+            glVertex2f(x,     y+boxH);
+        glEnd();
+
+        // Text quad with fade - using correct texture coordinates for proper orientation
+        glEnable(GL_TEXTURE_2D);
+        glBindTexture(GL_TEXTURE_2D, texId);
+        glColor4f(1f, 1f, 1f, alpha);
+        glBegin(GL_QUADS);
+            glTexCoord2f(0,1); glVertex2f(x+10,     y+10);
+            glTexCoord2f(1,1); glVertex2f(x+10+textW, y+10);
+            glTexCoord2f(1,0); glVertex2f(x+10+textW, y+10+textH);
+            glTexCoord2f(0,0); glVertex2f(x+10,     y+10+textH);
+        glEnd();
+
+        // Disable blending after drawing
         glDisable(GL_BLEND);
-    }
-    
-    private void renderText(String text, float x, float y) {
-        // Use simple block text rendering for now
-        renderSimpleText(text, x, y);
-    }
-    
-    private void renderSimpleText(String text, float x, float y) {
-        // MUCH BIGGER block text rendering for better visibility
-        float charWidth = 20f;  // Doubled from 10f
-        float charHeight = 28f; // Doubled from 14f
-        float currentX = x;
-        float currentY = y;
-        
-        for (char c : text.toCharArray()) {
-            if (c == '\n') {
-                currentY -= charHeight + 5;
-                currentX = x;
-                continue;
-            }
-            
-            if (c == ' ') {
-                currentX += charWidth * 0.6f;
-                continue;
-            }
-            
-            // Draw a colored rectangle for each character with better contrast
-            glColor4f(1f, 1f, 1f, 1f);
-            glBegin(GL_QUADS);
-            glVertex2f(currentX, currentY);
-            glVertex2f(currentX + charWidth, currentY);
-            glVertex2f(currentX + charWidth, currentY + charHeight);
-            glVertex2f(currentX, currentY + charHeight);
-            glEnd();
-            
-            // Add a darker border for much better definition
-            glColor4f(0.3f, 0.3f, 0.3f, 1f);
-            glBegin(GL_LINE_LOOP);
-            glVertex2f(currentX, currentY);
-            glVertex2f(currentX + charWidth, currentY);
-            glVertex2f(currentX + charWidth, currentY + charHeight);
-            glVertex2f(currentX, currentY + charHeight);
-            glEnd();
-            
-            currentX += charWidth + 3;
-        }
+
+        // Restore OpenGL state
+        glMatrixMode(GL_TEXTURE);
+        glPopMatrix();
+        glMatrixMode(GL_MODELVIEW);
+        glPopAttrib();
     }
 
     public void gambling() {
@@ -584,6 +558,9 @@ public class Game {
         glVertex2f(sx - 10, sy - 5);
         glEnd();
 
+        // Save current OpenGL state
+        glPushAttrib(GL_ALL_ATTRIB_BITS);
+        
         // Enable blending for transparency
         glEnable(GL_BLEND);
         glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
@@ -605,6 +582,9 @@ public class Game {
         glBindTexture(GL_TEXTURE_2D, 0);
         glDisable(GL_TEXTURE_2D);
         glDisable(GL_BLEND);
+        
+        // Restore OpenGL state
+        glPopAttrib();
         
         // Render messages
         renderMessages();
@@ -670,7 +650,84 @@ public class Game {
         return textureID;
     }
 
+    private class Message {
+        final int texId;
+        final int textWidth, textHeight;
+        final double timestamp;
+
+        Message(String text, double timestamp) {
+            this.timestamp = timestamp;
+            int[] dims = createOrbitronTexture(text, 10);
+            this.textWidth = dims[0];
+            this.textHeight = dims[1];
+            this.texId = currentTex;
+        }
+    }
+
+    private int currentTex;
+
+    private int[] createOrbitronTexture(String text, int padding) {
+        // Use a more readable font size and fallback to system font if Orbitron not available
+        Font font;
+        try {
+            font = new Font("Orbitron", Font.BOLD, 24);
+            if (!font.getFamily().equals("Orbitron")) font = new Font("Arial", Font.BOLD, 24);
+        } catch (Exception e) {
+            font = new Font("Arial", Font.BOLD, 24);
+        }
+        AffineTransform dilation = AffineTransform.getScaleInstance(0.6, 1.2); // *dilation in math
+        font = font.deriveFont(dilation);
+
+        BufferedImage tmp = new BufferedImage(1,1,BufferedImage.TYPE_INT_ARGB);
+        Graphics2D g2d = tmp.createGraphics();
+        g2d.setFont(font);
+        FontMetrics fm = g2d.getFontMetrics();
+        int textW = fm.stringWidth(text);
+        int textH = fm.getHeight();
+        g2d.dispose();
+
+        int imgW = textW + padding * 2;
+        int imgH = textH + padding * 2;
+        BufferedImage img = new BufferedImage(imgW, imgH, BufferedImage.TYPE_INT_ARGB);
+        g2d = img.createGraphics();
+        g2d.setFont(font);
+        g2d.setColor(Color.WHITE);
+        g2d.setRenderingHint(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
+        g2d.setRenderingHint(RenderingHints.KEY_RENDERING, RenderingHints.VALUE_RENDER_QUALITY);
+        g2d.drawString(text, padding, fm.getAscent() + padding);
+        g2d.dispose();
+
+        int texId = glGenTextures();
+        glBindTexture(GL_TEXTURE_2D, texId);
+        glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR);
+        glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_LINEAR);
+
+        int[] pixels = img.getRGB(0,0,imgW,imgH,null,0,imgW);
+        ByteBuffer buffer = BufferUtils.createByteBuffer(imgW * imgH * 4);
+        
+        // Copy pixels to buffer in correct order
+        for (int y = 0; y < imgH; y++) {
+            for (int x = 0; x < imgW; x++) {
+                int p = pixels[y * imgW + x];
+                buffer.put((byte)((p >> 16) & 0xFF)); // Red
+                buffer.put((byte)((p >> 8) & 0xFF));  // Green
+                buffer.put((byte)(p & 0xFF));         // Blue
+                buffer.put((byte)((p >> 24) & 0xFF)); // Alpha
+            }
+        }
+        buffer.flip();
+        glTexImage2D(GL_TEXTURE_2D, 0, GL_RGBA8, imgW, imgH, 0, GL_RGBA, GL_UNSIGNED_BYTE, buffer);
+        currentTex = texId;
+        return new int[]{textW, textH};
+    }
+
     private void cleanup() {
+        // Clean up message textures
+        for (Message m : messages) {
+            glDeleteTextures(m.texId);
+        }
+        messages.clear();
+        
         GLFW.glfwDestroyWindow(window);
         GLFW.glfwTerminate();
         GLFW.glfwSetErrorCallback(null).free();
@@ -710,7 +767,7 @@ class Player {
     private final int MAX_COUNTER = 300; //changeable
     private final int _COUNTER_INCREMENT = 10; //changeable
     public boolean testing = false; //changeable
-    public int witchCharter = 0; //changeable
+    public int witchCharter = 1; //changeable
 
     public static float x, y;
     private float vx, vy;
@@ -1062,23 +1119,5 @@ class MobA {
         glVertex2f(x+size, y+size);
         glVertex2f(x, y+size);
         glEnd();
-    }
-}
-
-// TextBox message class for in-game notifications
-class TextBoxMessage {
-    public String text;
-    public float timer; // seconds left
-    public float fadeTime; // seconds to fade out
-
-    public TextBoxMessage(String text, float duration, float fadeTime) {
-        this.text = text;
-        this.timer = duration;
-        this.fadeTime = fadeTime;
-    }
-
-    public float getAlpha() {
-        if (timer > fadeTime) return 1f;
-        return Math.max(0f, timer / fadeTime);
     }
 }
